<resources>
    <string name="app_name">Petmily Care</string>
    <string name="register_photo_title">사진을 등록해주세요</string>
    <string name="radio_eye">안구 질환</string>
    <string name="radio_skin">피부 질환</string>
    <string name="btn_register">진단 기록</string>
    <string name="btn_diagnose">검사 하기</string>
    <string name="diagnosis_result">병명 :</string>
    <string name="definition">정의 :</string>
    <string name="cause">원인 :</string>
    <string name="hospital_examination">병원 검사:</string>
    <string name="home_care_tips">홈 케어 예방법:</string>
    <string name="registered_photo">등록된 사진</string>
    <string name="diagnosis_date">검사 일자 :</string>
    <string name="photo_register">사진을 등록해주세요</string>
    <string name="button_capture">사진 촬영</string>
    <string name="button_select">사진 선택</string>
    <string name="button_register">사진 등록</string>
    <string name="nav_diagnose">진단 하기</string>
    <string name="nav_history">진단 이력</string>
    <string name="nav_chatbot">챗봇</string>
    <string name="nav_home">홈</string>
    <string name="description_image">진단 결과 이미지</string>
    <string name="inspection_date_format">검사 일자 : %1$s</string>
    <string name="disease_name_format">병명 : %1$s</string>
    <string name="disease_cause_format">원인 : %1$s</string>
    <string name="example_diagnosis_result">병명 : 결막염</string>
    <string name="example_definition">정의 : 결막의 염증으로 눈이 붉어지고 가려움과 분비물이 발생</string>
    <string name="example_cause">원인 : 알레르기/세균·바이러스 감염/자극 물질</string>
    <string name="example_hospital_examination">병원 검사 : 안압 검사/결막 스크래핑/세균 배양</string>
    <string name="example_home_care_tips">홈 케어 예방법 : 청결 유지/처방 안약 사용</string>
</resources>
