<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="30dp"
    android:background="#FFE5CC">

    <!-- 반려동물 이미지 -->
    <ImageView
        android:id="@+id/image_pet"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:src="@drawable/app_main_image" />

    <!-- 텍스트 설명 -->
    <TextView
        android:id="@+id/text_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/photo_register"
        android:textSize="18sp"
        android:textColor="#444444"
        android:layout_marginTop="16dp"/>

    <!-- 사진 촬영 및 선택 버튼들 -->
    <LinearLayout
        android:layout_width="269dp"
        android:layout_height="71dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="horizontal">

        <!-- 사진 촬영 버튼 -->
        <Button
            android:id="@+id/button_capture"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/button_capture"
            android:textSize="20sp"
            android:background="@drawable/btn_color" />

        <!-- 사진 선택 버튼 -->
        <Button
            android:id="@+id/button_select"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/button_select"
            android:textSize="20sp"
            android:background="@drawable/btn_color" />
    </LinearLayout>

    <!-- 사진 등록 버튼 -->
    <Button
        android:id="@+id/button_register"
        android:layout_width="320dp"
        android:layout_height="82dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_color"
        android:textSize="30sp"
        android:text="@string/nav_diagnose" />

</LinearLayout>