<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#FFE5CC">

    <!-- 상단의 진단 기록 텍스트 -->
    <TextView
        android:id="@+id/diagnosisRecordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_history"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textColor="#000000" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp" >

        <ImageView
            android:id="@+id/registeredPhoto"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/white" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/inspectionDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diagnosis_date"
                android:textSize="16sp"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/diseaseName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diagnosis_result"
                android:textSize="16sp"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/diseaseCause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cause"
                android:textSize="16sp"
                android:textColor="#000000" />


        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/diagnosisRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <include
        layout="@layout/navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
