<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFE5CC">

    <!-- 사진 등록된 이미지를 보여주는 이미지 뷰 -->
    <ImageView
        android:id="@+id/registeredPhoto"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/registered_photo"
        android:background="@android:color/white"
        android:src="@drawable/eye_diagnose"
        android:scaleType="fitXY"/>

    <!-- 질환 유형 선택 라디오 그룹 -->
    <RadioGroup
        android:id="@+id/disease_type_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/registeredPhoto"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:textColor="#000000"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/radio_eye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_eye"
            android:textColor="#000000"
            android:buttonTint="@color/black"
            android:buttonTintMode="src_in"
            android:padding="14dp"/>

        <RadioButton
            android:id="@+id/radio_skin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_skin"
            android:textColor="#000000"
            android:buttonTint="@color/black"
            android:buttonTintMode="src_in"
            android:padding="14dp"/>
    </RadioGroup>

    <!-- 진단 버튼 -->
    <Button
        android:id="@+id/btnDiagnoseFromRegistered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_diagnose"
        android:layout_below="@id/registeredPhoto"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:textSize="18sp"
        android:backgroundTint="@android:color/holo_orange_light" />

    <!-- 진단 결과 표시하는 레이아웃 -->
    <LinearLayout
        android:id="@+id/resultLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnDiagnoseFromRegistered"
        android:layout_marginTop="22dp"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/diagnosisResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="병명 : "
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/definition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="정의 : "
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/cause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="원인 : "
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/hospitalExamination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="병원 검사 : "
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/homeCareTips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="홈 케어 예방법 : "
            android:textColor="#000000"
            android:textSize="20sp" />
    </LinearLayout>

    <!-- 하단 네비게이션 바 추가 -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:elevation="8dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="#FFCCCC"
        android:gravity="center"
        android:textAlignment="center"
        app:itemIconSize="26dp"
        app:itemPaddingBottom="6dp"
        app:itemPaddingTop="6dp"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_navigation_menu" />

</RelativeLayout>

